Fixed quote wrapping bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,8 @@ body{
     background-color: lightgray;
     padding-left: 250px;
     padding-right: 250px;
-    height: 300px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
 
 
